<resources>
    <string name="app_name">Notes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_notes">Your notes</string>
    <string name="record_name">Record name</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="add_new_record">Add new record</string>
    <string name="record_name_dialog">record name</string>
    <string name="add_dialog">Add</string>
    <string name="login_fragment">Login</string>
    <string name="login_fragment_hint">login</string>
    <string name="password_fragment_hint">password</string>
    <string name="sign_fragment">Sign</string>
    <string name="registration_fragment">Registration</string>
    <string name="login_registration_fragment_hint">login</string>
    <string name="password_registration_fragment_hint">password</string>
    <string name="email_registration_fragment_hint">email</string>
    <string name="register_registration_fragment">Register</string>
    <string name="you_will_sign_out_from_application">You will sign out from application</string>
    <string name="do_you_really_want_to_exit">Do you really want to exit?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="for_adding_notes_you_need_to_sign_in_or_sing_up">For adding notes you need to sign in or sing up</string>
    <string name="do_you_really_want_to_delete_this_record">Do you really want to delete this record</string>
    <string name="it_will_be_deleted_forever">It will be deleted forever</string>
    <string name="for_viewing_you_need_to_sign_in_or_sign_up">For viewing you need to sign in or sign up</string>
    <string name="do_you_agree_to_go_for_authorization">Do you agree to go for authorization?</string>
    <string name="incorrect_data">Incorrect data</string>
    <string name="login_and_password_must_be_longer_that_3_symbols_check_email">Login and password must be longer that 3 symbols, check email</string>
    <string name="login_and_password_must_be_longer_that_3_symbols">Login and password must be longer that 3 symbols</string>
    <string name="deleted_resultAPI">deleted</string>
    <string name="nothing_to_delete_resultAPI">nothing to delete</string>
    <string name="updated_resultAPI">updated</string>
    <string name="nothing_to_update_resultAPI">nothing to update</string>
    <string name="some_problems_with_adding_resultAPI">some problems with adding</string>
    <string name="exit">exit</string>
    <string name="back">back</string>
    <string name="registration_menu">registration</string>
    <string name="login_menu">login</string>
</resources>